# community-garden

./: .agent.md  .gitignore  AGENTS.md  README.md  README.ru.md  ROADMAP.md  convert_html.py  pyproject.toml
.agents/skills/admin_mirror/: SKILL.md
.agents/skills/community-garden/: SKILL.md
.agents/skills/comprehensive_report/: SKILL.md
.agents/skills/recommendations/: SKILL.md
.agents/skills/report_generator/: SKILL.md
.agents/skills/risk_analysis/: SKILL.md  risk_taxonomy.yml
.agents/skills/role_analysis/: SKILL.md  roles.yml
.agents/skills/semantic_metrics/: SKILL.md  index.md  registry.yml
.agents/skills/tribe_analysis/: SKILL.md
.github/workflows/: ci.yml
community-garden-core/: README.md  pyproject.toml
community-garden-core/sample_data/: telegram_result.json
community-garden-core/src/community_garden/: __init__.py  lake.py  models.py  project.py  utils.py
community-garden-core/tests/: test_pipeline.py
docs/: metrics.md
scripts/: convert_html.py  create_skills.py  fetch_tg_metadata.py
src/community_garden/: __init__.py  lake.py  periods.py  project.py  scheduler.py  utils.py
src/community_garden/adapters/: base.py  discord.py  slack.py  telegram_bot.py  telegram_export.py  telethon_local.py  whatsapp.py
src/community_garden/charts/: radar.py
src/community_garden/core/: pipeline.py
src/community_garden/graph/: analysis.py
src/community_garden/interfaces/: cli.py  fastapi_app.py  mcp_server.py
src/community_garden/llm/: packs.py
src/community_garden/metrics/: basic.py
tests/: test_pipeline.py
(+12 files in other folders)
