[project]
name = "community-garden-core"
version = "0.1.0"
description = "File-first async Python library, CLI, MCP/FastAPI-ready engine for community intelligence reports."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Artem Letyushev" }]
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "orjson>=3.10.7",
  "rich>=13.7.1",
  "jinja2>=3.1.4",
  "networkx>=3.3",
  "matplotlib>=3.9.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
bot = ["aiogram>=3.10.0"]
telethon = ["telethon>=1.36.0"]
fastapi = ["fastapi>=0.112.0", "uvicorn[standard]>=0.30.0"]
mcp = ["mcp>=1.2.0"]
llm = ["openai>=1.40.0", "anthropic>=0.34.0"]
dev = ["pytest>=8.3.0", "ruff>=0.5.0", "mypy>=1.11.0"]
all = [
  "aiogram>=3.10.0",
  "telethon>=1.36.0",
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "mcp>=1.2.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
]

[project.scripts]
cg = "community_garden.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/community_garden"]

